--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap');
+
+
 .Header {
     position: fixed;
     z-index: 1;
@@ -8,7 +11,7 @@
 }
 
 #logo {
-    height: 50px;
+    height: 45px;
     margin-right: 15px;
     margin-left: 10px;
 }
@@ -16,20 +19,17 @@
 .brand-header {
     display: flex;
     align-items: center;
-    color: #212F3C;
-    font-family: 'Roboto';
-    font-weight: 600;
+    letter-spacing: -3px;
+    font-family: 'Vast Shadow', cursive;
+    font-weight: 400;
 }
 
 #lnk-5 {
-    background-color: #178a00;
-    border-radius: 5px;
-    font-size: 18px;
+    background-color: #2E4053;
+    border-radius: 8px;
+    font-size: 22px;
+    font-weight: lighter;
     color: #FFF;
-}
-
-#lnk-5:hover {
-    background-color: #000;
 }
 
 .burger {
@@ -37,10 +37,12 @@
 }
 
 .link {
-    display: block;
+    display: flex;
+    align-items: center;
+    gap: 10px;
     line-height: 1;
     border-radius: 2rem;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
     margin: 1rem;
     text-decoration: none;
     font-size: 1.2rem;
@@ -49,12 +51,8 @@
     font-weight: 500;
 }
 
-.movil-lnk {
-    color: #FFF;
-}
-
 .link:hover {
-    background-color: #000;
+    background: linear-gradient(0deg, rgba(34,195,71,1) 0%, rgba(34,176,105,1) 100%);
     color: #FFF;
 }
 
@@ -67,14 +65,14 @@
     margin: 0;
 }
 
-@media (min-width: 1216px) {
+@media (min-width: 1345px) {
 
     .sm-list {
         display: none;
     }
 }
 
-@media (max-width: 1219px) {
+@media (max-width: 1345px) {
 
     .sm-list {
         position: absolute;
@@ -84,10 +82,10 @@
         z-index: 0;
         overflow: hidden;
         border-radius: 5px;
+        border: solid #000 3px;
         font-size: 12px;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        background-color: #000;
     }
 
     .dropdown, .links {
