--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,5 +1,5 @@
 .Categories {
-    min-height: 100vh;
+    min-height: 40vh;
     padding: 3rem;
     background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
     border-top: 5px solid #000;
@@ -15,6 +15,7 @@
     border: 5px solid #ffffff;
     box-shadow: -8px -8px 0px;
     transition: box-shadow 0.25s;
+    cursor: pointer;
 }
 
 .category:hover {
